# PokeRemake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Data/: Battles.json  Characters.json  Moves.json  Pokedex.json
Data/Actors/: SignPost.json  Tree.json
Data/Schemas/: BattleSchema.json  CharacterSchema.json  LayoutSchema.json  MapSchema.json  PokedexSchema.json
Google_tests/: ArrayTests.cpp  CMakeLists.txt  ColorTests.cpp  MatrixTests.cpp  ParamBlockTests.cpp  VectorTests.cpp
Resources/ActorDefs/: Portal.JSON  Scenery.JSON  SignPost.JSON  Tree.JSON
Resources/Dialog/: Signs.JSON
Resources/Maps/: Building.JSON  LargeMap.JSON  Map.JSON  Map2.JSON  Map3.JSON  Map4.JSON  NewMap.JSON  Overworld.JSON  PalletTown.JSON  PalletTown2.JSON  PalletTownAshHouseF0.JSON  PalletTownAshHouseF1.JSON  PalletTownGaryHouse.JSON  Portals.JSON  Temp.JSON  Test.JSON
Resources/Pokedex/: Battles.JSON  Pokedex.JSON  Pokedex.json
Resources/Schemas/: PokedexSchema.JSON
Resources/Shaders/: Default.frag  Default.vert
Resources/Styles/: Styles.css
Resources/Textures/: FullTileset.xcf  Tileset.schema.JSON  Tileset.xcf  Tileset1.psd  Tileset2.xcf  TilesetNew.JSON
Scripts/compile_binaries/: compile.py  requirements.txt
Scripts/generate_font/: extract.py
Scripts/generate_mon_defs/: conv_mon.py  generate_mon_defs.py  pokemon.json  raw_dex.json  raw_moves.json
Scripts/generate_move_defs/: Moves.json  conv_moves.py
Scripts/generate_sprites/: conv_mon.py
Scripts/parse_maps/: parse_map.py
Source/: CMakeLists.txt
Source/Editor/: ActorManager.h  CMakeLists.txt  EditorData.h  EditorGame.cpp  EditorGame.h  EditorHUD.cpp  EditorHUD.h  EditorMode.h  EditorView.cpp  EditorView.h  Main.cpp  Temp.cpp  Temp.h
Source/Editor/Actors/: ActorManager.cpp  EditorView.cpp
Source/Editor/Interface/: EditorHUD.cpp  EditorHUD.h  MultiSpinner.h
Source/Game/: BattleMode.cpp  BattleView.cpp  BattleView.h  CMakeLists.txt  FadeTransition.h  Main.cpp  MainGame.cpp  MainGame.h  MapMode.cpp  MapMode.h  Party.h  Pokedex.cpp  Pokedex.h  TestGame.cpp  TestGame.h  main.cpp
Source/Game/Actors/: NPC.h  Trainer.cpp  Trainer.h
Source/Game/Battle/: BattleEvents.h  BattleHUD.cpp  BattleHUD.h  BattleManager.cpp  BattleManager.h  BattleMode.cpp  BattleMode.h  BattleView.cpp  BattleView.h
Source/Game/Core/: Font.cpp  Font.h  GameConstants.h  GameSerializer.h  Ids.h  PokeParty.cpp  PokeParty.h  PokeStorage.cpp  PokeStorage.h  Pokedex.cpp  Pokedex.h  Pokemon.h  TextRenderer.cpp  TextRenderer.h
Source/Game/Interface/: BattleActionBox.cpp  BattleActionBox.h  BattleActionMenu.cpp  BattleActionMenu.h  BattleHUD.cpp  BattleHUD.h  BattleMoveMenu.cpp  BattleMoveMenu.h  BattlePPMenu.cpp  BattlePPMenu.h  DialogBox.cpp  DialogBox.h  Frame.cpp  Frame.h  GameHUD.cpp  GameHUD.h  TransitionOverlay.h
Source/Game/Interface/Battle/: BattleActionMenu.cpp  BattleActionMenu.h  BattleHUD.cpp  BattleHUD.h  BattleInterfaceConstants.h  BattleMoveMenu.h  BattlePPMenu.cpp  BattlePPMenu.h
Source/Game/Modes/: BattleMode.cpp  BattleMode.h  MapMode.cpp  MapMode.h
Source/Runtime/: CMakeLists.txt
Source/Runtime/Application/: Application.cpp  Application.h  ArgParser.h  Context.h
Source/Runtime/Core/: Array.h  Binary.h  Bitmask.h  CFwd.h  CSS.h  Color.cpp  Color.h  Common.h  Constants.h  Containers.h  CoreFwd.h  Decl.h  Delegate.cpp  Delegate.h  Files.h  Game.h  Json.cpp  Json.h  Logging.h  Macros.h  Map.h  Matrix.h  Meta.cpp  Meta.h  Rect.h  Settings.cpp  Settings.h  Singleton.h  String.h  Time.h  Vector.h
Source/Runtime/Engine/: CameraView.cpp  CameraView.h  Chunk.h  ClassRegistry.h  Dialog.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GameEvent.h  GameInstance.cpp  GameInstance.h  GameMode.cpp  GameMode.h  Input.cpp  Input.h  InputContext.cpp  InputContext.h  InputManager.cpp  InputManager.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  Mesh.h  Object.cpp  Object.h  ParamBlock.h  SaveState.h  Serialization.cpp  Serialization.h  Serializer.cpp  Serializer.h  Settings.cpp  Settings.h  Sprite.cpp  Sprite.h  TextPrinter.h  Texture.cpp  Texture.h  (+8 more)
Source/Runtime/Engine/Actors/: Actor.cpp  Actor.h  Character.cpp  Character.h  Chunk.cpp  Chunk.h  Collider.h  GameMap.cpp  GameMap.h  Grid.cpp  Grid.h  ICollider.h  ISelectable.h  Interactable.h  Map.cpp  Map.h  Object.h  PlayerCharacter.cpp  PlayerCharacter.h  Portal.cpp  Portal.h  Scenery.h  SceneryActor.cpp  SceneryActor.h  Selectable.h  SignPost.cpp  SignPost.h  Tile.cpp  Tile.h  World.cpp  World.h
Source/Runtime/Engine/Actors/Game/: SignPost.cpp  SignPost.h
Source/Runtime/Engine/Components/: CameraComponent.cpp  CameraComponent.h  CharacterMovementComponent.cpp  CharacterMovementComponent.h  CollisionComponent.cpp  CollisionComponent.h  Component.cpp  Component.h  InteractionComponent.cpp  InteractionComponent.h  SelectionComponent.cpp  SelectionComponent.h  SpriteComponent.cpp  SpriteComponent.h
Source/Runtime/Interface/: AbstractButton.cpp  AbstractButton.h  AbstractPopup.h  AbstractView.cpp  AbstractView.h  Box.h  Button.h  ButtonGroup.h  Canvas.h  ClipArea.h  Divider.h  Dropdown.cpp  Dropdown.h  EditText.h  GridView.h  Group.h  HUD.h  Image.h  ItemView.h  Layout.h  Menu.cpp  Menu.h  Padding.h  Panel.h  ScrollArea.h  Spacer.h  Spinner.h  Style.cpp  Style.h  Text.h  Widget.cpp  Widget.h
Source/Runtime/Interface/Game/: DialogBox.h  GameHUD.cpp  GameHUD.h
Source/Runtime/Platform/Generic/: IPlatform.cpp  IPlatform.h  Platform.h
Source/Runtime/Platform/SDL/: SDLPlatform.cpp  SDLPlatform.h
Source/Runtime/Platform/Windows/: WindowsPlatform.cpp  WindowsPlatform.h
Source/Runtime/Renderer/: Drawable.cpp  Drawable.h  IDrawable.h  IRHI.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Source/Runtime/Renderer/Generic/: IRenderer.cpp  IRenderer.h
Source/Runtime/Renderer/OpenGL/: OpenGLRHI.cpp  OpenGLRHI.h
Source/Runtime/Renderer/SDL/: SDLRenderer.cpp  SDLRenderer.h
